<resources>
    <string name="app_name">Travo</string>
    <string name="default_notification_channel_id">Channel01</string>
    <string name="channel_name">channel01</string>
    <string name="not_found">No data found</string>
    <string name="display_place">Display place</string>
    <string name="channel_description">Notification in APP</string>
<!--    <string name="safety_net_api_key">AIzaSyAu526UKMbe2bkV5rlj0TaA89JImXYExdc</string>-->
    <string name="safety_net_api_key">AIzaSyB9vCGj7Ho6KFixC6KQ1y1bihfQ-bRsp80</string>
    <string name="web_client_id">895633310054-dolr75hlkamik90dtbgq6qfj3kn9lrli.apps.googleusercontent.com</string>
    <string name="fq_client_id">IK4QB0KWMKJMNIFDXJY5X51VUP4NPXSPV0K12D4Z3D5YZUQZ</string>
    <string name="fq_client_secret">PGSIDON1C2TSKTSDNKIK4G2GSMCRMK1AXTKUJZWUU0GRWWEL</string>
    <string name="dist_unit"> M</string>
    <string name="location_activity">Location activity</string>
    <string name="todo">TODO</string>
    <string name="_1_x_pizza">1 x Pizza</string>
    <string name="name">Name</string>
    <string name="delivered_by">Delivered by</string>
    <string name="price">Price</string>
    <string name="amount_saved">Amount Saved:</string>
    <string name="delivered_on">Delivered on</string>
    <string name="enter_location">Enter Location</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">LastName</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">Sign Up</string>
    <string name="reset">Reset</string>
    <string name="phone">Phone</string>
    <string name="google">Google</string>
    <string name="otp">OTP</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="rating">rating</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="food_location">Food, Location</string>
    <string name="find_best_deal">Find best deal</string>
    <string name="compare_all_deals">Compare all deals</string>
    <string name="ScrollView">scrollview</string>
    <string name="orders"></string>
    <string name="favorite_item">Favorite Item</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Home Page</string>
    <string name="second_fragment_label">Profile Page</string>
    <string name="third_fragment_label">Order Page</string>

    <string name="profile">Profile</string>
    <string name="profileImage">profileImage</string>
    <string name="edit">Edit</string>
    <string name="username">UserName</string>
    <string name="change_password">Change Password</string>
    <string name="app_notifications">App Notifications</string>
    <string name="location">Location</string>
    <string name="india">India</string>
    <string name="search_map">Search</string>
    <string name="log_in">Log in</string>
    <string name="anonymous_login">Anonomyous login</string>
    <string name="order_value">25</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="dob">Date of Birth</string>
    <string name="update">Update</string>
    <string name="not_available">Not Available</string>
    <string name="slider_image">Slider Image</string>
    <string name="FavoriteValue">5</string>
    <string name="favourite_shops">Favourite Shops</string>
    <string name="back">Back</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="reset_password">Reset Password</string>
    <string name="link_with_email">Link with Email</string>
    <string name="link">Link</string>
    <string name="restaurant">Restaurant</string>
    <string name="food_item">Food Item</string>
    <string name="best_deal">Best Deal</string>
    <string name="close">Close</string>
    <string name="other_deals">Other Deals</string>
    <string name="place_order">Place Order</string>
    <string name="pizza">Pizza</string>
    <string name="description">Pizza (Italian: [ˈpittsa], Neapolitan: [ˈpittsə]) is a dish of Italian origin consisting of a usually round, flat base of leavened wheat-based dough topped with tomatoes, cheese, and often various other ingredients (such as anchovies, mushrooms, onions, olives, pineapple, meat, etc.), which is then baked at a high temperature, traditionally in a wood-fired oven</string>
    <string name="item_detail">Item Detail</string>
    <string name="restaurant_detail">Restaurant Detail</string>
    <string name="provider">Provider</string>
    <string name="more_items_you_will_like">More Items You will like…</string>
    <string name="dominos">Dominos</string>
    <string name="closing_time">Closing Time</string>
    <string name="menu_items">Menu Items</string>
    <string name="faq">Frequently Asked Questions:</string>
    <string name="query">Query</string>
    <string name="content">Content</string>
    <string name="faq1">FAQ</string>
    <string name="favfood_gmail_com">FavFood@gmail.com</string>
    <string name="ask_more_detail_at">Ask More Detail at</string>
    <string name="user_name">User Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="distance">Distance</string>
    <string name="desc">Desc</string>
    <string name="radius">Radius(5KM)</string>
</resources>