<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/home">
    <fragment
        android:id="@+id/home"
        android:name="com.example.tourguideapp.Fragments.FragmentHome"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/account1"
        android:name="com.example.tourguideapp.Fragments.FragmentProfile"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/order"
        android:name="com.example.tourguideapp.Fragments.FragmentOrder"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_order" />

</navigation>