<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/restaurantName1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/aladin"
                android:paddingStart="10dp"
                android:paddingEnd="2dp"
                android:text="@string/restaurant"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/itemPrice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/aladin"
                android:text="@string/price"
                android:textSize="20sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/provider2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:fontFamily="@font/aladin"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="2dp"
            android:text="@string/provider"
            android:textSize="22sp" />

        <Button
            android:id="@+id/placeOrder1"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/roundedcorners"
            android:text="@string/place_order"
            android:textColor="#212121"
            android:textSize="12sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>