<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/place_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardMaxElevation="7dp"
            android:background="@drawable/rounded"
            android:backgroundTint="@color/grey0"
            android:layout_marginHorizontal="4dp">
            <LinearLayout
                android:id="@+id/restLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/view5"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:elevation="12dp"
                    android:innerRadius="0dp"
                    android:shape="ring"
                    android:thicknessRatio="1.9"
                    app:cardCornerRadius="80dp">

                    <ImageView
                        android:id="@+id/place_view"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/todo"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/pizza"
                        tools:ignore="ImageContrastCheck" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/place_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:layout_weight="1"
                        android:textColor="@color/grey9"
                        android:text="@string/restaurant_name"
                        android:textSize="18sp"/>

                        <TextView
                            android:id="@+id/place_ratingBar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/distance"
                            android:textColor="@color/grey9"
                            android:textSize="16sp"
                            android:layout_weight="1"
                            android:contentDescription="@string/rating"/>
                        <TextView
                            android:id="@+id/place_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textColor="@color/grey9"
                            android:layout_weight="1"
                            android:text="@string/desc"/>
                    </LinearLayout>
                </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>