<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:nestedScrollingEnabled="false"
    tools:context=".Activities.ItemInfo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="-229dp"
        tools:layout_editor_absoluteY="-9dp"
        android:background="@color/background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="10sp"
            android:gravity="start|center_vertical"
            android:text="@string/restaurant_detail"
            android:fontFamily="@font/aladin"
            android:textColor="@color/contrast"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/restaurantImage"
            app:layout_constraintStart_toEndOf="@+id/backPage1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/backPage1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageView
            android:id="@+id/restaurantImage"
            android:layout_width="0dp"
            android:layout_height="240dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backPage1"
            app:srcCompat="@drawable/dominos" />

        <TextView
            android:id="@+id/restaurantName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/aladin"
            android:text="@string/dominos"
            android:textColor="@color/contrast"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restaurantImage" />

        <RatingBar
            android:id="@+id/ratingBar2"
            android:layout_width="239dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/FavoriteValue"
            android:isIndicator="true"
            app:layout_constraintStart_toStartOf="@+id/restaurantName2"
            app:layout_constraintTop_toBottomOf="@+id/restaurantName2" />

        <TextView
            android:id="@+id/rating1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:text="@string/FavoriteValue"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/ratingBar2"
            app:layout_constraintStart_toEndOf="@+id/ratingBar2"
            app:layout_constraintTop_toTopOf="@+id/ratingBar2" />

        <ImageView
            android:id="@+id/favoriteIcon1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="@+id/restaurantName2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/restaurantName2"
            app:srcCompat="@drawable/ic_baseline_favorite_order_24" />

        <TextView
            android:id="@+id/restLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/aladin"
            android:text="@string/location"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.046"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar2" />

        <TextView
            android:id="@+id/closingTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/aladin"
            android:text="@string/closing_time"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.048"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restLocation" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/aladin"
            android:gravity="center"
            android:text="@string/menu_items"
            android:textColor="#004D40"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/closingTime"
            android:visibility="invisible"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView22">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerMenu"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:nestedScrollingEnabled="true" />

            <ProgressBar
                android:id="@+id/progressBar3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>